コピー機能できてなかったので追加

--- a/index.html
+++ b/index.html
@@ -99,12 +99,12 @@
                     <span>現在のデータです．別ブラウザに移行する際にはこの値をコピペで移行してください．</span>
                     <div>
                         <div>項目一覧:
-                            <input class="uk-input" style="width: 10em" type="text" v-model="ItemList" v-on:change="updateData()"/>
-                            <button class="uk-button uk-button-primary">コピー</button>
+                            <input id="setting-1" class="uk-input" style="width: 10em" type="text" v-model="ItemList" v-on:change="updateData()"/>
+                            <button class="uk-button uk-button-primary" v-on:click="copy('setting-1')">コピー</button>
                         </div>
                         <div>履歴一覧:
-                            <input class="uk-input" style="width: 10em" type="text" v-model="HistoryList" v-on:change="updateData()" />
-                            <button class="uk-button uk-button-primary">コピー</button>
+                            <input id="setting-2" class="uk-input" style="width: 10em" type="text" v-model="HistoryList" v-on:change="updateData()" />
+                            <button class="uk-button uk-button-primary" v-on:click="copy('setting-2')">コピー</button>
                         </div>
                         <buttton class="uk-button uk-button-danger" v-on:click="remove">
                             データ削除
