--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <div>
                         <input class="uk-input uk-width-1-6" type="text" placeholder="項目名" v-model="itemName">
                         <button class="uk-button uk-button-primary" v-on:click="add">Add</button>
-                        <input class="uk-input uk-width-1-6" type="text" placeholder="検索" v-model="search">
+                        <input class="uk-input uk-width-1-6" type="text" placeholder="検索(正規表現)" v-model="search">
                         <div>{{ msg }}</div>
                     </div>
                     <hr />
@@ -67,7 +67,7 @@
                                 <label>全{{ Logs.length }}件中<input class="uk-input uk-width-1-6" type="number" v-model="ShowCount" /> 件表示</label>
                             </div>
                             <div>
-                                <input class="uk-input uk-width-1-4" v-model="search" type="text" placeholder="検索" />
+                                <input class="uk-input uk-width-1-4" v-model="search" type="text" placeholder="検索(正規表現)" />
                             </div>
                         <ol>
                             <li v-for='x in filter(Logs)' class="uk-child-width-auto">
@@ -90,7 +90,8 @@
                     <span>Today: 今日のタイムスタンプ．コンボボックスで種別を選んでADD!</span><br />
                     <span>History: 今までのタイムスタンプ．CSVでダウンロードもここから(と思ったけど未実装．欲しくなったら作る)</span><br />
                     <br />
-                    その他: HTML/Javascriptのみなのでデータはブラウザ側に保存されます．
+                    その他: HTML/Javascriptのみなのでデータはブラウザ側に保存されます．<br />
+                    検索機能は正規表現が利用でき，全て(時間，種別，メモ)が検索対象です．
                 </div>
             </li>
             <li>
